--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "airtable": "^0.11.4",
+    "axios": "^0.27.2",
     "clsx": "^1.2.1",
+    "fetch-meta-tags": "^1.0.10",
     "next": "^12.2.3",
+    "puppeteer": "^15.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
