--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     },
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/SmallWebCard.jsx", "src/pages/api/getHomePage.jsx", "src/pages/api/getMeta.js", "src/pages/index.jsx", "src/components/LargeWebCard.jsx", "src/components/Hero.jsx", "src/components/FilterCard.jsx", "src/components/Body.jsx", "src/components/WebsiteForm.jsx"],
   "exclude": ["node_modules"],
   "moduleResolution": ["node_modules", ".next", "node"]
 }
