--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "airtable": "^0.11.4",
     "axios": "^0.27.2",
+    "chrome-aws-lambda": "^10.1.0",
     "clsx": "^1.2.1",
     "fetch-meta-tags": "^1.0.10",
     "next": "^12.2.3",
