--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fetch-meta-tags": "^1.0.10",
     "next": "^12.2.3",
     "puppeteer": "^15.5.0",
+    "puppeteer-core": "^18.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
