--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
+    "react-lottie-player": "^1.4.3",
     "tailwind-merge": "^1.5.1"
   },
   "devDependencies": {
